[package]
name = "untracker"
version = "0.1.0"
edition = "2021"

[dependencies]
openmpt = { path = "../openmpt-rs" }
hound = "3.5"  # For WAV file output
clap = { version = "4.0", features = ["derive"] }  # For command-line parsing
anyhow = "1.0"  # For error handling
thiserror = "1.0"  # For custom error types
symphonia = { version = "0.5.5", features = ["flac", "pcm"], optional = true }  # For FLAC encoding
vorbis-encoder = { version = "0.1.4", optional = true }  # For Vorbis encoding
opus = { version = "0.3.1", optional = true }  # For Opus encoding
flacenc = { version = "0.5.1", optional = true }  # For FLAC encoding

[features]
default = []
vorbis = ["dep:vorbis-encoder"]
opus = ["dep:opus"]
flac = ["dep:flacenc", "dep:symphonia"]
all_formats = ["vorbis", "opus", "flac"]