[package]
name = "untracker"
version = "0.1.0"
edition = "2021"

[dependencies]
openmpt = { path = "crates/openmpt" }
hound = "3.5"  # For WAV file output
clap = { version = "4.0", features = ["derive"] }  # For command-line parsing
anyhow = "1.0"  # For error handling
thiserror = "1.0"  # For custom error types
rayon = "1.8"  # For parallel processing
symphonia = { version = "0.5.5", features = ["flac", "pcm", "ogg"], optional = true }  # For FLAC and Vorbis encoding
opus = { version = "0.3.1", optional = true }  # For Opus encoding
ogg = { version = "0.9", optional = true }  # For Ogg encapsulation
flacenc = { version = "0.5.1", optional = true }  # For FLAC encoding

[workspace]
members = [
    ".",
    "crates/openmpt",
    "crates/openmpt-sys",
]

[features]
default = []
vorbis = ["dep:symphonia", "dep:ogg"]
opus = ["dep:opus", "dep:ogg"]
flac = ["dep:flacenc", "dep:symphonia"]
all_formats = ["vorbis", "opus", "flac"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"